--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body {
 }
 
 
-@media (min-width: 800px) {
+@media (max-width: 800px) {
   #navbar{
     display: flex;
     justify-content: center;
