--- a/styles.css
+++ b/styles.css
@@ -156,9 +156,10 @@ body {
 
   #welcome-section{
     background-color: #2D5128;
+    height:750px;
   }
   #welcome-section h1 {
-    font-size: 2.7rem;
+    justify-content: center;
     color: #8da750;
   }
   #welcome-section p{
