--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ body {
   }
 
   #welcome-section{
-    background-color: #2D5128;
+    background-color: #0000;
     height:750px;
   }
   #welcome-section h1 {
