--- a/styles.css
+++ b/styles.css
@@ -155,14 +155,14 @@ body {
   }
 
   #welcome-section{
-    background-color: #0000;
+    background-color: #142C14;
     height:750px;
   }
   #welcome-section h1 {
     justify-content: center;
     text-align: center;
     color: #8da750;
-    padding-top: 25px;
+    margin-top: 25px;
   }
   #welcome-section p{
     color: #E4EB90;
