--- a/styles.css
+++ b/styles.css
@@ -157,8 +157,8 @@ body {
   }
 
   #welcome-section{
-    background-color: #142C14;
-    height:750px;
+    background-color: #8da750;
+    height:550px;
   }
   #welcome-section h1 {
     justify-content: center;
