--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ body {
   }
 
   #welcome-section{
-    background-color: #8da750;
+    background-color: #2D5128;
     height:550px;
   }
   #welcome-section h1 {
